# kserve-custom-runtimes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  cspell.json  pyproject.toml
scripts/: harbor-cmd.sh  input-v2.json  input.json  test-api.sh
src/kserve_custom_runtimes/: __init__.py  llm.py
