[project]
name = "kserve-custom-runtimes"
version = "0.1.0"
description = "A customized version of vLLM inference runtime for KServe"
readme = "README.md"
authors = [
    { name = "BlueDruddigon", email = "haibuihoang1999@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "kserve==0.14.1",
  "vllm==0.6.6",
  "faiss-cpu>=1.11.0",
  "setuptools>=61"
]

[project.optional-dependencies]
storage = ["boto3>=1.29.0"]

[project.scripts]
kserve-custom-runtimes = "kserve_custom_runtimes:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
link-mode = "copy"
no-cache = true

[tool.ruff]
extend = "~/.config/pyproject/pyproject.toml"

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__"]

# Assume Python 3.11
pythonVersion = "3.11"
pythonPlatform = "Darwin"

typeCheckingMode = "basic"
useLibraryCodeForTypes = true

# diagnosticSeverityOverrides
reportGeneralTypeIssues = false
reportPrivateImportUsage = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportUnboundVariable = false
reportUnusedImport = false
reportUnknownMemberType = false
reportAssignmentType = false
reportAttributeAccessIssue = false

[tool.yapf]
based_on_style = "facebook"
allow_multiline_lambdas = true
arithmetic_precedence_indication = true
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
column_limit = 120
continuation_indent_width = 2
dedent_closing_brackets = true
indent_width = 4
join_multiple_lines = true
spaces_around_power_operator = true
spaces_around_dict_delimiters = false
spaces_before_comment = 2
split_complex_comprehension = true
